@@ -39,6 +39,7 @@ Geoffrey Gowan
 Greg Bentz
 Holger Bischoff
 Holger Schurig
+Hristo Hristov
 Ian Ashley
 James Dugal
 Jason Crummack
