@@ -268,7 +268,7 @@ SQLRETURN SQLParamData( SQLHSTMT statement_handle,
 
             if ( ret == SQL_SUCCESS_WITH_INFO )
             {
-                function_return_ex( SQL_HANDLE_STMT, statement, ret, TRUE );
+                function_return_ex( IGNORE_THREAD, statement, ret, TRUE );
             }
 
             local_ret = SQLNUMRESULTCOLS( statement -> connection,
